source/assets/stylesheets/all.css.scss
@charset "utf-8";

@import "scaffold";
@import "tooltips";

$color-brand: #1abf89;
$gutter: 30px;

body:after {
  content: "";
  position: fixed;
  width: 100%;
  height: 3px;
  top: 0;
  right: 0;
  left: 0;
  background-color: $color-brand;
}
article {
  margin-top: 70px;
  padding: $gutter;
}
#editor{
  margin: 0 auto;
  //width: 70%;
  max-width: 700px;
}

.logo {
  display: block;
  float: left;
  margin: -34px 7px 11px 25px;
  position: absolute;
  left: 0;
  top: 28px;
}

.top-left,
.top-right {
  position: fixed;
  top: $gutter;
}

.top-left {
  left: $gutter;
}
.top-right {
  right: $gutter;
}

.github {
  font-size: 40px;
  color: $color-brand;
  line-height: 0;
  i {
    position: relative;
    top: -2px;
  }
}

